change theme color

--- a/static/pages/esplanade.html
+++ b/static/pages/esplanade.html
@@ -35,7 +35,7 @@
                 <div class="container">
                     <a class="navbar-logo" href="/">
                         <img src="../img/logo.svg" alt="Yichang">
-                        <span>Yichang</span>
+                        <span>Yichang Li</span>
                     </a>
                 </div>
             </div>
@@ -85,9 +85,12 @@
                             <h3>The Process</h3>
                         </div>
                     </div>
-                    <div class="row justify-content-center">
+                    <div class="row justify-content-center m-2rem-t">
                         <div class="col-lg-9">
-                            <img class="m-2rem-t " src="../img/design_process.png"/>
+                            <picture>
+                                <source srcset="../img/design_process.png" media="(min-width: 576px)">
+                                <img src="../img/design_process_sm.png" alt="the summary of the design process">
+                            </picture>
                         </div>
                     </div>
                 </div>
@@ -131,9 +134,12 @@
 
                         </div>
                     </div>
-                    <div class="row justify-content-center">
+                    <div class="row justify-content-center m-2rem-t">
                         <div class="col">
-                            <img src="../img/docs.png"/>
+                            <picture>
+                                <source srcset="../img/docs.png" media="(min-width: 576px)">
+                                <img src="../img/docs_sm.png" alt="screenshot of some of the analysis docs">
+                            </picture>
                         </div>
                     </div>
                 </div>
