--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="container">
                     <a class="navbar-logo" href="/">
                         <img src="static/img/logo.svg" alt="Yichang">
-                        <span>Yichang</span>
+                        <span>Yichang Li</span>
                     </a>
                     <!-- TODO: navigation -->
                     <!-- <div class="navbar-collapse justify-content-end collapse" id="navbar-collapse-toggle">
