--- a/static/pages/zalora.html
+++ b/static/pages/zalora.html
@@ -35,7 +35,7 @@
                 <div class="container">
                     <a class="navbar-logo" href="/">
                         <img src="../img/logo.svg" alt="Yichang">
-                        <span>Yichang</span>
+                        <span>Yichang Li</span>
                     </a>
                 </div>
             </div>
