fix responsive issue due to font size

--- a/index.html
+++ b/index.html
@@ -33,25 +33,10 @@
         <header class="header-nav">
             <!-- Header Middle -->
             <div class="navbar navbar-default navbar-expand-lg main-navbar">
-                <div class="container">
-                    <a class="navbar-logo" href="/">
-                        <img src="static/img/logo.svg" alt="Yichang">
-                        <span>Yichang Li</span>
-                    </a>
-                    <!-- TODO: navigation -->
-                    <!-- <div class="navbar-collapse justify-content-end collapse" id="navbar-collapse-toggle">
-                        <ul class="nav navbar-nav">
-                            <li><a class="nav-link" href="static/pages/studies.html">Case Studies</a></li>
-                            <li><a class="nav-link" href="static/pages/about.html">About</a></li>
-                        </ul>
-                    </div>
-                    <div class="extra-menu d-flex align-items-center">
-                        <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbar-collapse-toggle" aria-expanded="false">
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div> -->
-
-                </div>
+                <a class="navbar-logo" href="/">
+                    <img src="static/img/logo.svg" alt="Yichang">
+                    <span>Yichang Li</span>
+                </a>
             </div>
             <!-- End Header Middle -->
         </header>
@@ -96,59 +81,89 @@
 
             <section id="case_study">
                 <div class="container">
-                    <h2 class="m-5rem-b">Projects</h2>
+                    <div class="section-title text-center m-5rem-b">
+                        <h3>Projects</h3>
+                    </div>
                     <div class="row">
                         <div class="col-lg-6">
-                            <div class="portfolio-box-01">
-                                <div class="portfolio-img">
-                                    <img src="static/img/esplanade.png" title="" alt="">
-                                </div>
-                                <div class="portfolio-info">
-                                    <a href="static/pages/esplanade.html" class="gallery-link">
-                                        <h4>Redesigning the esplanade website</h4>
-                                        <p>(Concept) Website, Information Architecture </p>
+                            <div class="blog-grid">
+                                <div class="blog-grid-img">
+                                    <a href="#">
+                                        <img src="static/img/esplanade.png" title="esplanade show case" alt="esplanade show case">
                                     </a>
+                                </div>
+                                <div class="blog-gird-info">
+                                    <div class="b-meta">
+                                        <span class="date">Concept</span>
+                                        <span class="meta">Website, Information Architecture</span>
+                                    </div>
+                                    <h5><a href="#">Redesigning the esplanade website</a></h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                    <div class="btn-grid">
+                                        <a class="m-btn-link" href="static/pages/esplanade.html">Read More</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            <div class="portfolio-box-01">
-                                <div class="portfolio-img">
-                                    <img src="static/img/ourbarehands.png" title="" alt="">
+                            <div class="blog-grid">
+                                <div class="blog-grid-img">
+                                    <a href="#">
+                                        <img src="static/img/ourbarehands.png" title="ourbarehands show case" alt="ourbarehands show case">
+                                    </a>
                                 </div>
-                                <div class="portfolio-info">
-                                    <a class="gallery-link">
-                                        <h4>Our Barehands (Coming soon)</h4>
-                                        <p>Mobile Design, Content Strategy</p>
-                                    </span>
+                                <div class="blog-gird-info">
+                                    <div class="b-meta">
+                                        <span class="date">Client Project</span>
+                                        <span class="meta">Mobile App Design, Content Strategy</span>
+                                    </div>
+                                    <h5><a href="#">Our Barehands (Coming soon)</a></h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                    <div class="btn-grid">
+                                        <a class="m-btn-link" href="#">Read More</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="row m-2rem-t">
-                        <div class="col-lg-4">
-                            <div class="portfolio-box-01">
-                                <div class="portfolio-img">
-                                    <img src="static/img/huemail.png" title="" alt="">
+                        <div class="col-lg-6">
+                            <div class="blog-grid">
+                                <div class="blog-grid-img">
+                                    <a href="#">
+                                        <img src="static/img/huemail.png" title="huemail security feature show case" alt="huemail security feature show case">
+                                    </a>
                                 </div>
-                                <div class="portfolio-info">
-                                    <a class="gallery-link">
-                                        <h4>Protected: Enterprised Email Security Features</h4>
-                                        <p>UX, Mobile Design, Web Development</p>
-                                    </span>
+                                <div class="blog-gird-info">
+                                    <div class="b-meta">
+                                        <span class="date">Protected</span>
+                                        <span class="meta">Mobile App & Desktop Design, Web Development</span>
+                                    </div>
+                                    <h5><a href="#">Enterprised Email Security Features</a></h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                    <div class="btn-grid">
+                                        <a class="m-btn-link" href="#">Read More</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-8">
-                            <div class="portfolio-box-01">
-                                <div class="portfolio-img">
-                                    <img src="static/img/zalora.png" title="" alt="">
-                                </div>
-                                <div class="portfolio-info">
-                                    <a href="static/pages/zalora.html" class="gallery-link">
-                                        <h4>ZALORA Design System Library</h4>
-                                        <p>Design System, Design Patterns, React, CSS</p>
+                        <div class="col-lg-6">
+                            <div class="blog-grid">
+                                <div class="blog-grid-img">
+                                    <a href="#">
+                                        <img src="static/img/zalora.png" title="zalora design system show case" alt="zalora design system show case">
                                     </a>
+                                </div>
+                                <div class="blog-gird-info">
+                                    <div class="b-meta">
+                                        <span class="date">Design System</span>
+                                        <span class="meta">UX Patterns, React, CSS</span>
+                                    </div>
+                                    <h5><a href="#">ZALORA Design System</a></h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                    <div class="btn-grid">
+                                        <a class="m-btn-link" href="static/pages/zalora.html">Read More</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
