--- a/static/pages/esplanade.html
+++ b/static/pages/esplanade.html
@@ -32,19 +32,16 @@
         <header class="header-nav">
             <!-- Header Middle -->
             <div class="navbar navbar-default navbar-expand-lg main-navbar">
-                <div class="container">
-                    <a class="navbar-logo" href="/">
-                        <img src="../img/logo.svg" alt="Yichang">
-                        <span>Yichang Li</span>
-                    </a>
-                </div>
+                <a class="navbar-logo" href="/">
+                    <img src="../img/logo.svg" alt="Yichang">
+                    <span>Yichang Li</span>
+                </a>
             </div>
             <!-- End Header Middle -->
         </header>
 
         <!-- Main -->
         <main>
-            <!-- Design project 1 (Esplanade) -->
             <section id="esplanade_project_overview">
                 <div class="container">
                     <div class="m-3rem-b m-6rem-t">
@@ -192,16 +189,16 @@
                             <div class="m-0rem-t medium-dark-color">To address the issue with the navigation, we needed to revise the information architecture of the site.</div>
                         </div>
                     </div>
-                    <div class="row m-3rem-t">
-                        <div class="col-lg-7">
+                    <div class="row m-3rem-t justify-content-center">
+                        <div class="col-lg-9">
                             <img src="../img/card_sorting.png">
-                        </div>
-                        <div class="offset-lg-1 col-lg-4">
-                            <h6>Card sorting</h6>
-                            <p>We used an open card sorting methodology to understand better how users group concepts and label the groups.</p>
                         </div>
                     </div>
                     <div class="row m-3rem-t">
+                        <div class="offset-lg-8 col-lg-4">
+                            <h6>Card sorting</h6>
+                            <p>We used an open card sorting methodology to understand better how users group concepts and label the groups.</p>
+                        </div>
                         <div class="offset-lg-8 col-lg-4 m-3rem-t">
                             <h6>Tree Testing</h6>
                             <p>We redesigned the grouping and relabeled some of the concepts based on the response from card sorting. And we conducted a tree testing section to test our revised architecture.</p>
@@ -331,7 +328,6 @@
                 </div>
             </section>
 
-            <!-- End project 1 -->
         </main>
         <!-- main end -->
         <!-- Footer-->
