fix some typo in zalora styleguide and add project description in home page

--- a/static/pages/zalora.html
+++ b/static/pages/zalora.html
@@ -59,7 +59,7 @@
                             </div>
                             <div class="col-lg-4">
                                 <h6>Overview</h6>
-                                <div>Style is a design system that defines the interaction standards, design patterns and guidelines for all ZALORA products. It was my job to provide aid from development perspective and creatively direct the creation and documentation of the design system. I worked with Pramiti (UX Manager, Interaction), Eugene (UX Manager, Research), Sheila (UI Designer) and Doro (Prodoct Manager) on the project.</div>
+                                <div>Style is a design system that defines the interaction standards, design patterns, and guidelines for all ZALORA products. It was my job to provide aid from the development perspective and creatively direct the creation and documentation of the design system. I worked with Pramiti (UX Manager, Interaction), Eugene (UX Manager, Research), Sheila (UI Designer) and, Doro (Product Manager) on the project.</div>
                                 <h6>Deliverables </h6>
                                 <ul>
                                     <li>ZALORA/Style (CSS component library)</li>
@@ -76,7 +76,7 @@
                     <div class="row m-6rem-t">
                         <div class="col">
                             <h3>My Role</h3>
-                            <p>As a frontend developer on the team, I bring a frontend focus with HTML & CSS knowledge, seasoned skills to establish conventions and tool building. My responsibilities range from reviewing and auditing the as-is design and implementation, providing aid with frontend focus to ensure the design is scalable and reusable, contributing to the design system documentations.</p>
+                            <p>As a frontend developer on the team, I bring a frontend focus with HTML & CSS knowledge, seasoned skills to establish conventions and tool building. My responsibilities range from reviewing and auditing the as-is design and implementation, providing aid with frontend focus to ensure the design is scalable and reusable, contributing to the design system documentation.</p>
                         </div>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
         
                             <h5>Mission & Vision</h5>
                             <p>
-                                As a frontend developer, my job was to make sure the mission and vision are aligned with what development team wanted to achieve. Thus, the design system is not only aimed to provide a joyful, enriching, unified experience to to the customers, but also ensures low cost of changes and a balance between creativity and efficiency.
+                                The design system is not only aimed to provide a joyful, enriching, unified experience to the customers but also ensures a low cost of changes and a balance between creativity and efficiency.
                             </p>
                         </div>
                     </div>
@@ -121,7 +121,9 @@
                     <div class="row m-6rem-t">
                         <div class="col-lg-5">
                             <h3>Design, Code & Doc</h3>
-                            <p>We deliveried the components/elements progressively over sprints. We started by design and building the visual style (e.g. color, typography and space etc) which was followed by UI components (e.g. Button, Tabs, Labels, etc).</p>
+                            <p>
+                                We delivered the components/elements progressively over sprints. We started by design and building the visual style (e.g., color, typography, and space), which was followed by UI components (e.g., Button, Tabs, Labels).
+                            </p>
                         </div>
                     </div>
                     <div class="row">
@@ -129,10 +131,7 @@
                             <svg class="icon theme-color"><use xlink:href="img/symbol-defs.svg#icon-no_1"></use></svg>
                             <h5 class="m-1rem-t">Data-driven Design</h5>
                             <p class="medium-dark-color">
-                                I looked for tracking data in Google Analytics that can be used to inform the design decisions. Based on the raffic from different platforms, we decided to adopt mobile-first approach. We defined the breakpoints for the grid system by referencing the distribution of the screen sizes.
-                            </p>
-                            <p class="medium-dark-color">
-                                In the meanwhile, the designers employed tools like Sketch, InVision inalizing work at a high-fidelity consistent with system conventions.
+                                I looked for tracking data in Google Analytics that can be used to inform the design decisions. Based on the traffic from different platforms, we decided to adopt a mobile-first approach. We defined the breakpoints for the grid system by referencing the distribution of the screen sizes.
                             </p>
                         </div>
                         <div class="col-lg-4">
@@ -141,9 +140,9 @@
                             <div class="medium-dark-color">
                                 <p>Due to the current implementation of the mobile website and the desktop website, we implemented two libraries: ZALORA/Style and ZALORA/Styleguide.</p>
                                 <span>ZALORA/Style</span>
-                                <p>This library was built by CSS and HTML. It defined the look of each components and common animations. </p>
+                                <p>This library was built by CSS and HTML. It defined the appearance of components and the animations.</p>
                                 <span>ZALORA/Style-react</span>
-                                <p>This library defined the look of the components by referencing ZALORA/Style. But it also defined the behaviors assisted by ReactJs. It mainly served for the mobile platform.</p>
+                                <p>This library defined the look of the components by referencing ZALORA/Style. It also defined the behaviors assisted by ReactJs. It mainly served for the mobile platform.</p>
                             </div>
                         </div>
                         <div class="col-lg-4">
@@ -152,7 +151,7 @@
                             <div class="medium-dark-color">
                                 <p>There were two kinds of documentation being provided: the design guidelines, and the distribution guides.</p>
                                 <span>Design Guidelines</span>
-                                <p>The design guidelines includes the general guides, e.g. principles of ZALORA product design, ZALORA's tone of voice that governed the whole design system, as well as the docs for individual components e.g. the spec, usage in code and in design, and suggested/anti patterns for each component.</p>
+                                <p>The design guidelines include the general guides (e.g., principles of ZALORA product design, ZALORA's tone of voice that governed the whole design system), as well as the docs for individual components (e.g., the spec, usage in code and design, and suggested/anti patterns).</p>
                                 <span>Distribution Guides</span>
                                 <p>The distribution guides is for developers who wants to distribute to the library. It includes the library structure, the conventions, tooling, etc.</p>
                             </div>
@@ -169,9 +168,9 @@
                 <div class="container">
                     <div class="row">
                         <h3>Workshops & Talks</h3>
-                        <p>In order to get more people use our new design system, we held workshops and talks to market our design system. Our participants were not limited to developers, PMs and designers, we also invited QAs and content team marketing department.</p>
+                        <p>In order to get more people to use our new design system, we held workshops and talks to market our design system. Our participants were not limited to developers, PMs, and designers. We also invited the QAs and content team marketing department.</p>
                         <br>
-                        <p>Apart from holdin workshops and talks to introduce the design system, as a developer, I also implemented a <a href="http://zalora.github.io/styleguide/#/playground">playground</a> as part of the documentation portal to encourage people to try the new design system without bothering setting up the development environment.</p>
+                        <p>Apart from holding workshops and talks to introduce the design system, as a developer, I also implemented a <a href="http://zalora.github.io/styleguide/#/playground">playground</a> as part of the documentation portal to encourage people to try the new design system without bothering setting up the development environment.</p>
                     </div>
                 </div>
             </section>
