--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                         <span class="meta">Website, Information Architecture</span>
                                     </div>
                                     <h5><a href="#">Redesigning the esplanade website</a></h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                    <p>We redesigned the Information Architecture (IA) and key pages layout/wireframes of Esplanade. We proceeded with the project by following the design thinking process.</p>
                                     <div class="btn-grid">
                                         <a class="m-btn-link" href="static/pages/esplanade.html">Read More</a>
                                     </div>
@@ -118,7 +118,7 @@
                                         <span class="meta">Mobile App Design, Content Strategy</span>
                                     </div>
                                     <h5><a href="#">Our Barehands (Coming soon)</a></h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                    <p>We came up with the content strategy to engage the customer of Our Barehands with the brand story with a focus on their purchasing journey.</p>
                                     <div class="btn-grid">
                                         <a class="m-btn-link" href="#">Read More</a>
                                     </div>
@@ -140,7 +140,7 @@
                                         <span class="meta">Mobile App & Desktop Design, Web Development</span>
                                     </div>
                                     <h5><a href="#">Enterprised Email Security Features</a></h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                    <p>I worked together with the business team and delivered user scenarios, user flows, interactive prototype, design specification documentation, and conducted usability testing. </p>
                                     <div class="btn-grid">
                                         <a class="m-btn-link" href="#">Read More</a>
                                     </div>
@@ -160,7 +160,7 @@
                                         <span class="meta">UX Patterns, React, CSS</span>
                                     </div>
                                     <h5><a href="#">ZALORA Design System</a></h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                    <p>I provided aid from the development perspective and creatively directed the creation and documentation of the design system.</p>
                                     <div class="btn-grid">
                                         <a class="m-btn-link" href="static/pages/zalora.html">Read More</a>
                                     </div>
