fix spacing of header

--- a/static/pages/esplanade.html
+++ b/static/pages/esplanade.html
@@ -32,10 +32,12 @@
         <header class="header-nav">
             <!-- Header Middle -->
             <div class="navbar navbar-default navbar-expand-lg main-navbar">
-                <a class="navbar-logo" href="/">
-                    <img src="../img/logo.svg" alt="Yichang">
-                    <span>Yichang Li</span>
-                </a>
+                <div class="container">
+                    <a class="navbar-logo" href="/">
+                        <img src="../img/logo.svg" alt="Yichang">
+                        <span>Yichang Li</span>
+                    </a>
+                </div>
             </div>
             <!-- End Header Middle -->
         </header>
