--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                         <h3>Projects</h3>
                     </div>
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 m-3rem-t">
                             <div class="blog-grid">
                                 <div class="blog-grid-img">
-                                    <a href="#">
+                                    <a href="static/pages/esplanade.html">
                                         <img src="static/img/esplanade.png" title="esplanade show case" alt="esplanade show case">
                                     </a>
                                 </div>
@@ -99,60 +99,17 @@
                                         <span class="date">Concept</span>
                                         <span class="meta">Website, Information Architecture</span>
                                     </div>
-                                    <h5><a href="#">Redesigning the esplanade website</a></h5>
-                                    <p>We redesigned the Information Architecture (IA) and key pages layout/wireframes of Esplanade. We proceeded with the project by following the design thinking process.</p>
+                                    <h5><a href="static/pages/esplanade.html">Redesigning the esplanade website</a></h5>
                                     <div class="btn-grid">
                                         <a class="m-btn-link" href="static/pages/esplanade.html">Read More</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 m-3rem-t">
                             <div class="blog-grid">
                                 <div class="blog-grid-img">
-                                    <a href="#">
-                                        <img src="static/img/ourbarehands.png" title="ourbarehands show case" alt="ourbarehands show case">
-                                    </a>
-                                </div>
-                                <div class="blog-gird-info">
-                                    <div class="b-meta">
-                                        <span class="date">Client Project</span>
-                                        <span class="meta">Mobile App Design, Content Strategy</span>
-                                    </div>
-                                    <h5><a href="#">Our Barehands (Coming soon)</a></h5>
-                                    <p>We came up with the content strategy to engage the customer of Our Barehands with the brand story with a focus on their purchasing journey.</p>
-                                    <div class="btn-grid">
-                                        <a class="m-btn-link" href="#">Read More</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row m-2rem-t">
-                        <div class="col-lg-6">
-                            <div class="blog-grid">
-                                <div class="blog-grid-img">
-                                    <a href="#">
-                                        <img src="static/img/huemail.png" title="huemail security feature show case" alt="huemail security feature show case">
-                                    </a>
-                                </div>
-                                <div class="blog-gird-info">
-                                    <div class="b-meta">
-                                        <span class="date">Protected</span>
-                                        <span class="meta">Mobile App & Desktop Design, Web Development</span>
-                                    </div>
-                                    <h5><a href="#">Enterprised Email Security Features</a></h5>
-                                    <p>I worked together with the business team and delivered user scenarios, user flows, interactive prototype, design specification documentation, and conducted usability testing. </p>
-                                    <div class="btn-grid">
-                                        <a class="m-btn-link" href="#">Read More</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="blog-grid">
-                                <div class="blog-grid-img">
-                                    <a href="#">
+                                    <a href="static/pages/zalora.html">
                                         <img src="static/img/zalora.png" title="zalora design system show case" alt="zalora design system show case">
                                     </a>
                                 </div>
@@ -161,11 +118,50 @@
                                         <span class="date">Design System</span>
                                         <span class="meta">UX Patterns, React, CSS</span>
                                     </div>
-                                    <h5><a href="#">ZALORA Design System</a></h5>
-                                    <p>I provided aid from the development perspective and creatively directed the creation and documentation of the design system.</p>
+                                    <h5><a href="static/pages/zalora.html">ZALORA Design System</a></h5>
                                     <div class="btn-grid">
                                         <a class="m-btn-link" href="static/pages/zalora.html">Read More</a>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 m-3rem-t">
+                            <div class="blog-grid">
+                                <div class="blog-grid-img">
+                                    <a>
+                                        <img src="static/img/huemail.png" title="huemail security feature show case" alt="huemail security feature show case">
+                                    </a>
+                                </div>
+                                <div class="blog-gird-info">
+                                    <div class="b-meta">
+                                        <span class="date">Protected</span>
+                                        <span class="meta">Project Management, Product Design</span>
+                                    </div>
+                                    <h5><a>Enterprised Email Security Features</a></h5>
+                                    <!-- <div class="btn-grid">
+                                        <a class="m-btn-link">Read More</a>
+                                    </div> -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 m-3rem-t">
+                            <div class="blog-grid">
+                                <div class="blog-grid-img">
+                                    <a>
+                                        <img src="static/img/ourbarehands.png" title="ourbarehands show case" alt="ourbarehands show case">
+                                    </a>
+                                </div>
+                                <div class="blog-gird-info">
+                                    <div class="b-meta">
+                                        <span class="date">Client Project</span>
+                                        <span class="meta">App Design, Content Strategy</span>
+                                    </div>
+                                    <h5><a>Our Barehands (Coming soon)</a></h5>
+                                    <!-- <div class="btn-grid">
+                                        <a class="m-btn-link" href="#">Read More</a>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
