--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
                                 </div>
                                 <div class="blog-gird-info">
                                     <div class="b-meta">
-                                        <span class="date">Protected</span>
+                                        <span class="date">Released Project</span>
                                         <span class="meta">Project Management, Product Design</span>
                                     </div>
-                                    <h5><a>Enterprised Email Security Features</a></h5>
+                                    <h5><a>Enterprised Email Security Features (Coming soon)</a></h5>
                                     <!-- <div class="btn-grid">
                                         <a class="m-btn-link">Read More</a>
                                     </div> -->
@@ -150,15 +150,15 @@
                             <div class="blog-grid">
                                 <div class="blog-grid-img">
                                     <a>
-                                        <img src="static/img/ourbarehands.png" title="ourbarehands show case" alt="ourbarehands show case">
+                                        <img src="static/img/autodesk.png" title="autodesk desktop app show case" alt="autodesk desktop app show case">
                                     </a>
                                 </div>
                                 <div class="blog-gird-info">
                                     <div class="b-meta">
-                                        <span class="date">Client Project</span>
-                                        <span class="meta">App Design, Content Strategy</span>
+                                        <span class="date">Intern Project</span>
+                                        <span class="meta">UX Design, Prototype</span>
                                     </div>
-                                    <h5><a>Our Barehands (Coming soon)</a></h5>
+                                    <h5><a>Autodesk WingMan Project (Coming soon)</a></h5>
                                     <!-- <div class="btn-grid">
                                         <a class="m-btn-link" href="#">Read More</a>
                                     </div> -->
