add case study for autodesk

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <div class="col-lg-6 m-3rem-t">
                             <div class="blog-grid">
                                 <div class="blog-grid-img">
-                                    <a>
+                                    <a href="static/pages/autodesk.html">
                                         <img src="static/img/autodesk.png" title="autodesk desktop app show case" alt="autodesk desktop app show case">
                                     </a>
                                 </div>
@@ -158,10 +158,10 @@
                                         <span class="date">Intern Project</span>
                                         <span class="meta">UX Design, Prototype</span>
                                     </div>
-                                    <h5><a>Autodesk WingMan Project (Coming soon)</a></h5>
-                                    <!-- <div class="btn-grid">
-                                        <a class="m-btn-link" href="#">Read More</a>
-                                    </div> -->
+                                    <h5><a href="static/pages/autodesk.html">Autodesk WingMan Project</a></h5>
+                                    <div class="btn-grid">
+                                        <a class="m-btn-link" href="static/pages/autodesk.html">Read More</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
