--- a/static/pages/esplanade.html
+++ b/static/pages/esplanade.html
@@ -316,7 +316,11 @@
                             <p>For pages with secondary navigation, we introduced scrollable tabs. Users can quickly swipe left and right to switch between tabs.</p>
                         </div>
                     </div>
-                    <div class="row m-3rem-t">
+                </div>
+            </section>
+            <section id="esplanade_whatnext" class="hideme">
+                <div class="container">
+                    <div class="row">
                         <div class="col">
                             <h3>What's Next</h3>
                             <p>
