Add case study for huemail

--- a/index.html
+++ b/index.html
@@ -130,19 +130,19 @@
                         <div class="col-lg-6 m-3rem-t">
                             <div class="blog-grid">
                                 <div class="blog-grid-img">
-                                    <a>
+                                    <a href="static/pages/wap.html">
                                         <img src="static/img/huemail.png" title="huemail security feature show case" alt="huemail security feature show case">
                                     </a>
                                 </div>
                                 <div class="blog-gird-info">
                                     <div class="b-meta">
                                         <span class="date">Released Project</span>
-                                        <span class="meta">Project Management, Product Design</span>
+                                        <span class="meta">Product Design</span>
                                     </div>
-                                    <h5><a>Enterprised Email Security Features (Coming soon)</a></h5>
-                                    <!-- <div class="btn-grid">
-                                        <a class="m-btn-link">Read More</a>
-                                    </div> -->
+                                    <h5><a href="static/pages/wap.html">Enterprised Email Security Features (Coming soon)</a></h5>
+                                    <div class="btn-grid">
+                                        <a class="m-btn-link" href="static/pages/wap.html">Read More</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
