--- a/static/pages/autodesk.html
+++ b/static/pages/autodesk.html
@@ -45,8 +45,8 @@
         <!-- Main -->
         <main>
             <section id="autodesk_project_overview">
-                <div class="container">
-                    <div class="m-3rem-b m-6rem-t">
+                <div class="container light-bg">
+                    <div class="m-3rem">
                         <h1>Project WingMan</h1><br>
                         <small>Prototype · UI/UX Design</small>
                         <div class="row m-1rem-b m-3rem-t">
@@ -154,6 +154,7 @@
                                 I am quite proud of the Project Wingman. It was my first UX project worked on. And Seeing my designs went to live one year after my internship finished was also one of the most unforgettable moments in my life.  
                             </p>
                             <div class='embed-container'><iframe src='https://www.youtube.com/embed/6BEYPlph1TU' frameborder='0' allowfullscreen></iframe></div>                        </div>
+                        </div>
                     </div>
                 </div>
             </section>
