change icon position

--- a/static/pages/wap.html
+++ b/static/pages/wap.html
@@ -96,7 +96,7 @@
                             <p>
                                 Due to the limited time and resources, I couldn't interview any real customers. As the target customers of the HUE Mail system were Japanese companies, and the majority of them are in banking and government fields. 
                             </p>
-                            <h5>User Interviews <svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-user_interview"></use></svg></h5>
+                            <h5><svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-user_interview"></use></svg>User Interviews</h5>
                             <p>
                                 I did my research by interviewing people who worked in the same fields in my circle. And I summarized my findings in user scenarios and sent them to the product owner and sales in the Japan office to review. It helped me to align my understanding and the direction of the project with the business side.   
                             </p>
@@ -116,12 +116,12 @@
                     </div>
                     <div class="row m-3rem-t">
                         <div class="col-lg-4">
-                            <h5>Admin <svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-admin"></use></svg></h5>
+                            <h5><svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-admin"></use></svg>Admin</h5>
                             <h6>Set Rules</h6>
                             <p>Being a financial company with strict restrictions about sending attachments outside the organization, their administrator wants an approval flow for all users trying to send an attachment. So that emails with attachments will be held before the sender's supervisor approves the email.</p>
                         </div>
                         <div class="col-lg-4">
-                            <h5>Mail Sender <svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-sender"></use></svg></h5>
+                            <h5><svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-sender"></use></svg>Mail Sender</h5>
                             <h6>Send Requests</h6>
                             <p>The employee of a financial company wants to send mail outside the company that contains an attachment. He needs to submit an approval request to his supervisor.</p>
                             <h6>Send Reminder</h6>
@@ -130,7 +130,7 @@
                             <p>Once his reminder is not acknowledged, he realizes his supervisor is on leave and wants to change the approver.</p>
                         </div>
                         <div class="col-lg-4">
-                            <h5>Mail Approver <svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-supervisor"></use></svg></h5>
+                            <h5><svg class="icon theme-color"><use xlink:href="symbol-defs.svg#icon-supervisor"></use></svg>Mail Approver</h5>
                             <h6>Edit & Approve</h6>
                             <p>Most points in the approval application from subordinates are correct, but there is a minor typing error. The supervisor wants to edit the typing error by himself and approve the mail with changes to save time.</p>
                             <h6>Remand Request</h6>
