update resume, fix some grammar error, add light bg to esplanade

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                         <span class="date">Concept</span>
                                         <span class="meta">Website, Information Architecture</span>
                                     </div>
-                                    <h5><a href="static/pages/esplanade.html">Redesigning the esplanade website</a></h5>
+                                    <h5><a href="static/pages/esplanade.html">Redesigning the Esplanade Website</a></h5>
                                     <div class="btn-grid">
                                         <a class="m-btn-link" href="static/pages/esplanade.html">Read More</a>
                                     </div>
@@ -137,9 +137,9 @@
                                 <div class="blog-gird-info">
                                     <div class="b-meta">
                                         <span class="date">Released Project</span>
-                                        <span class="meta">Product Design</span>
+                                        <span class="meta">Product Design, Enterprise System</span>
                                     </div>
-                                    <h5><a href="static/pages/wap.html">Enterprised Email Security Features (Coming soon)</a></h5>
+                                    <h5><a href="static/pages/wap.html">Enterprise Email Security Features (Coming soon)</a></h5>
                                     <div class="btn-grid">
                                         <a class="m-btn-link" href="static/pages/wap.html">Read More</a>
                                     </div>
