--- a/static/pages/autodesk.html
+++ b/static/pages/autodesk.html
@@ -60,7 +60,9 @@
                             </div>
                             <div class="col-lg-4">
                                 <h6>Overview</h6>
-                                <div>Project Wingman was a futuristic projection of a new central hub for installing and updating the suite of Autodesk Products. I was introduced to the concept and was tasked to design and optimize the installing and updating experience of the individual service.  Besides, I also implemented the interactive prototypes in code that were used in usability testing and production. </div>
+                                <div>
+                                    Project Wingman was a futuristic projection of a new central hub for installing and updating the suite of Autodesk products. I was introduced to the concept and was tasked to design and optimize the installing and updating experience of an individual product. Besides, I also implemented the interactive prototypes in code that were used in usability testing and production. 
+                                </div>
                             </div>
                         </div>
                     </div>
