--- a/static/pages/esplanade.html
+++ b/static/pages/esplanade.html
@@ -32,7 +32,7 @@
         <header class="header-nav">
             <!-- Header Middle -->
             <div class="navbar navbar-default navbar-expand-lg main-navbar">
-                <div class="container">
+                <div class="container light-bg">
                     <a class="navbar-logo" href="/">
                         <img src="../img/logo.svg" alt="Yichang">
                         <span>Yichang Li</span>
