--- a/static/pages/wap.html
+++ b/static/pages/wap.html
@@ -111,7 +111,7 @@
                             <div class="section-title">
                                 <h3>Scenarios</h3>
                             </div>
-                            <div class="m-1rem-t medium-dark-color m-0rem-t">There are 3 main user categories: Admin, Mail Sender, Mail Approver.</div>
+                            <div class="m-1rem-t medium-dark-color m-0rem-t">There are 3 main user categories: admin, mail sender, mail approver.</div>
                         </div>
                     </div>
                     <div class="row m-3rem-t">
