remove coming soon

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                         <span class="date">Released Project</span>
                                         <span class="meta">Product Design, Enterprise System</span>
                                     </div>
-                                    <h5><a href="static/pages/wap.html">Enterprise Email Security Features (Coming soon)</a></h5>
+                                    <h5><a href="static/pages/wap.html">Enterprise Email Security Features</a></h5>
                                     <div class="btn-grid">
                                         <a class="m-btn-link" href="static/pages/wap.html">Read More</a>
                                     </div>
