--- a/static/pages/zalora.html
+++ b/static/pages/zalora.html
@@ -66,7 +66,7 @@
                                 <ul>
                                     <li>ZALORA/Style (CSS component library)</li>
                                     <li><a href="http://zalora.github.io/style-react">Style-react (React component library)</a></li>
-                                    <li><a href="http://zalora/github.io/styleguide">Documentation Portal</a></li>
+                                    <li><a href="http://zalora.github.io/styleguide">Documentation Portal</a></li>
                                 </ul>
                             </div>
                         </div>
