update job title

--- a/static/pages/zalora.html
+++ b/static/pages/zalora.html
@@ -55,7 +55,7 @@
                                 <h6>Duration</h6>
                                 <div> 6 Months</div>
                                 <h6 class="m-1.5rem-t">Role</h6>
-                                <div>Frontend Developer</div>
+                                <div>Design Technologist</div>
                                 <h6 class="m-1.5rem-t">Tools</h6>
                                 <div>ReactJs, HTML, CSS, SVG</div>
                             </div>
